--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </script>
     <script>
         function displayName(){
-            var name = "Ajia Abdulhamid";
+            var name = "Ajia";
              alert(name);
         }
     </script>
